[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/templates/music_fader/MusicFader.gd" type="Script" id=1]

[node name="MusicFader" type="AudioStreamPlayer"]
volume_db = -80.0
script = ExtResource( 1 )

[node name="FadeInTween" type="Tween" parent="."]

[node name="FadeOutTween" type="Tween" parent="."]
[connection signal="tween_completed" from="FadeOutTween" to="." method="_on_FadeOutTween_tween_completed"]
